--- a/style.css
+++ b/style.css
@@ -4,10 +4,53 @@
     box-sizing: border-box;
 }
 
-.small_input {
-    width: 80px;
-    margin-left: 10px;
-    border-radius: 8px;
-    border: 1px solid gray;
-    padding: 3px;
+body {
+    background: rgb(240, 189, 127);
+    background: linear-gradient(90deg, rgba(240, 189, 127, 1) 0%, rgba(209, 91, 12, 1) 100%);
+    text-align: center;
+    font-family: Ubuntu;
+}
+
+h1 {
+    padding: 2em 0em;
+    font-weight: bold;
+}
+
+
+/* MAIN */
+
+#bigContainer {
+    width: 70vw;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.lodashes {
+    background: white;
+    padding: 1em;
+    width: 20vw;
+    border-radius: 20px;
+    border: 1px solid grey;
+}
+
+h3,
+input,
+p {
+    padding: 0.3em;
+    margin-bottom: 1em;
+}
+
+.submit {
+    margin: 1.5em;
+    background: black;
+    color: white;
+    padding: .5em 1em;
+    border-radius: 5px;
+}
+
+.submit:hover {
+    background: rgb(211, 211, 211);
+    color: rgb(5, 5, 5);
+    transition: .2s;
 }
